--- a/Loon_diy.conf
+++ b/Loon_diy.conf
@@ -38,7 +38,6 @@ iQZone = https://gist.githubusercontent.com/,img-url=https://raw.githubuserconte
 Global = select,节点选择,img-url = img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 Telegram = select,节点选择,新加坡,img-url = img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
 Apple = select,DIRECT,节点选择,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
-IP归属地 = select,DIRECT,iQZone,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Lab.png
 Emby = select,DIRECT,节点选择,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Emby.png
 PayPal = select,节点选择,美国,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
 漏网之鱼 = select,节点选择,DIRECT,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
@@ -60,16 +59,16 @@ FINAL,🦈 漏网之鱼
 
 # >分流规则 远程订阅
 [Remote Rule]
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Global/Global.list, policy=♻️ 自动选择, tag=🌍 Global, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/GlobalMedia/GlobalMedia.list, policy=♻️ 自动选择, tag=🌍 GlobalMedia, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/GlobalMedia/GlobalMedia_Domain.list, policy=♻️ 自动选择, tag=🌍 GlobalMedia_Domain, enabled=true
-https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list, policy=DIRECT, tag=🎯 中国-直连, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/ChinaIPs/ChinaIPs.list, policy=DIRECT, tag=🎯 中国IP-直连, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/WeChat/WeChat.list, policy=DIRECT, tag=💬 微信-直连, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Speedtest/Speedtest.list, policy=DIRECT, tag=🌐 Speedtest-直连, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Apple/Apple.list, policy=DIRECT, tag=🍎 Apple, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Global/Global.list, policy=Global, tag=🌍 Global, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/GlobalMedia/GlobalMedia.list, policy=Global, tag=🌍 GlobalMedia, enabled=true
+https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list, policy=DIRECT, tag=🎯 中国, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/WeChat/WeChat.list, policy=DIRECT, tag=💬 微信, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Speedtest/Speedtest.list, policy=DIRECT, tag=🌐 Speedtest, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Spotify/Spotify.list, policy=DIRECT, tag=🎵 Spotify, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Apple/Apple.list, policy=Apple, tag=🍎 Apple, enabled=true
 https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.Telegram.list, policy=Telegram, tag=📟 Telegram, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/PayPal/PayPal.list, policy=PayPal, tag=💰 PayPal, enabled=true
+https://raw.githubusercontent.com/yishangfei/run/main/Loon/Filter/Emby.list, policy=Emby, tag📺 Emby, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Hijacking/Hijacking.list, policy=REJECT, tag=⛔️ 全球拦截, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Privacy/Privacy.list, policy=REJECT, tag=⛔️ 全球拦截, enabled=true
 
@@ -96,12 +95,16 @@ https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/Siri.plugin,tag
 https://raw.githubusercontent.com/Peng-YM/Loon-Gallery/master/loon-gallery.plugin, tag=🎈Gallery, enabled=true
 https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.loon.plugin, tag=BoxJS, enabled=true
 https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/Loon.plugin, tag=Sub-Store订阅, enabled=true
+https://raw.githubusercontent.com/deezertidal/private/main/NodeLinkCheck.plugin, tag=NodeLinkCheck, enabled=true
 https://raw.githubusercontent.com/deezertidal/private/main/startingad.plugin, tag=APP启动页去广告, enabled=true
 https://raw.githubusercontent.com/deezertidal/private/main/bili.plugin, tag=Bilibili解锁高清画质, enabled=true
 https://raw.githubusercontent.com/deezertidal/private/main/biliad.plugin, tag=Bilibili去广告, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/Loon/Advertising/Advertising.plugin, tag=重写去广告, enabled=true
+https://raw.githubusercontent.com/deezertidal/private/main/AdBlock.plugin, tag=Ad广告屏蔽, enabled=true
+https://raw.githubusercontent.com/deezertidal/private/main/wechatad.plugin, tag=微信公众号去广告, enabled=true
+https://raw.githubusercontent.com/deezertidal/private/main/weiboad.plugin, tag=微博去广告, enabled=true
+https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Plugin/Block/YouTubeAds.plugin, tag=YouTube去广告, enabled=true
+https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Plugin/Block/ZhiHu.plugin, tag=知乎去广告, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/Loon/Redirect/Redirect.plugin, tag=重定向, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_lite.lnplugin, tag=知乎助手_去广告, enabled=true
 
 [MITM]
 hostname =
