--- a/Loon_diy.conf
+++ b/Loon_diy.conf
@@ -35,12 +35,12 @@ iQZone = https://gist.githubusercontent.com/,img-url=https://raw.githubuserconte
 [Proxy Group]
 自动选择 = url-test,iQZone,url = http://www.gstatic.com/generate_204,interval = 1800,tolerance = 30,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Auto.png
 节点选择 = select,自动选择,香港,日本,其他,Other,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Static.png
-Global = select,节点选择,img-url = img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
-Telegram = select,节点选择,新加坡,img-url = img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
-Apple = select,DIRECT,节点选择,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
-Emby = select,DIRECT,节点选择,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Emby.png
-PayPal = select,节点选择,美国,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
-漏网之鱼 = select,节点选择,DIRECT,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
+Global = select,节点选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
+Telegram = select,节点选择,新加坡,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
+Apple = select,DIRECT,节点选择,img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
+Emby = select,DIRECT,节点选择,img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Emby.png
+PayPal = select,节点选择,美国,img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
+漏网之鱼 = select,节点选择,DIRECT,img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
 
 # >筛选订阅节点
 [Remote Filter]
