--- a/Loon_diy.conf
+++ b/Loon_diy.conf
@@ -2,17 +2,17 @@
 # IPv6 支持
 ipv6 = false
 # > 跳过某个域名或者IP段
-skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, localhost, *.local, passenger.t3go.cn,passenger.t3go.cn
+skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,localhost,*.local,passenger.t3go.cn,passenger.t3go.cn
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 # DNS 服务器
 dns-server = system,223.5.5.5,119.29.29.29
 doh-server = https://dns.alidns.com/dns-query
 # Wi-Fi 访问
 allow-udp-proxy = false
-allow-wifi-access = false
+allow-wifi-access = true
 wifi-access-http-port = 7890
-wifi-access-socket5-port = 7890
-# > 解决一些ip请求无法匹配域名类规则的问题。real-ip指定的域名将不返回fake ip响应，直接将dns请求发往目标dns服务器
+wifi-access-socks5-port = 7890
+# > real-ip指定的域名将不返回fake ip响应，直接将dns请求发往目标dns服务器
 real-ip = msftconnecttest.com, msftncsi.com, *.msftconnecttest.com, *.msftncsi.com, *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, *.battlenet.com.cn, *.battlenet.com, *.blzstatic.cn, *.battle.net
 # > 代理测速 URL
 proxy-test-url = http://www.gstatic.com/generate_204
@@ -29,7 +29,7 @@ resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/bac
 
 # >机场订阅
 [Remote Proxy]
-iQZone = https://gist.githubusercontent.com/,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China_Telecom.png
+iQZone = https://gist.githubusercontent.com/yishangfei,udp=false,fast-open=false,vmess-aead=true,enabled=true,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China_Telecom.png
 
 # >策略组
 [Proxy Group]
@@ -37,10 +37,10 @@ iQZone = https://gist.githubusercontent.com/,img-url=https://raw.githubuserconte
 节点选择 = select,自动选择,香港,日本,其他,Other,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Static.png
 Global = select,节点选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 Telegram = select,节点选择,新加坡,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
-Apple = select,DIRECT,节点选择,img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
-Emby = select,DIRECT,节点选择,img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Emby.png
-PayPal = select,节点选择,美国,img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
-漏网之鱼 = select,节点选择,DIRECT,img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
+Apple = select,DIRECT,节点选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
+Emby = select,DIRECT,节点选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Emby.png
+PayPal = select,节点选择,美国,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
+漏网之鱼 = select,节点选择,DIRECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
 
 # >筛选订阅节点
 [Remote Filter]
@@ -54,15 +54,13 @@ PayPal = select,节点选择,美国,img-url= https://raw.githubusercontent.com/K
 # >本地分流规则
 [Rule]
 GEOIP,CN,DIRECT
-FINAL,🦈 漏网之鱼
+FINAL,漏网之鱼
 
 
 # >分流规则 远程订阅
 [Remote Rule]
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Global/Global.list, policy=Global, tag=🌍 Global, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/GlobalMedia/GlobalMedia.list, policy=Global, tag=🌍 GlobalMedia, enabled=true
 https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list, policy=DIRECT, tag=🎯 中国ASN, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/China/China.list, policy=DIRECT, tag=🎯 国内网站, enabled=true 
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/China/China.list, policy=DIRECT, tag=🎯 国内网站, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/ChinaIPs/ChinaIPs.list, policy=DIRECT, tag=🎯 中国IP, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/WeChat/WeChat.list, policy=DIRECT, tag=💬 微信, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Speedtest/Speedtest.list, policy=DIRECT, tag=🌐 Speedtest, enabled=true
@@ -70,7 +68,9 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Apple/Apple.list, policy=Apple, tag=🍎 Apple, enabled=true
 https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.Telegram.list, policy=Telegram, tag=📟 Telegram, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/PayPal/PayPal.list, policy=PayPal, tag=💰 PayPal, enabled=true
-https://raw.githubusercontent.com/yishangfei/run/main/Loon/Filter/Emby.list, policy=Emby, tag📺 Emby, enabled=true
+https://raw.githubusercontent.com/yishangfei/run/main/Loon/Filter/Emby.list, policy=Emby, tag=📺 Emby, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Global/Global.list, policy=Global, tag=🌍 Global, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/GlobalMedia/GlobalMedia.list, policy=Global, tag=🌍 GlobalMedia, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Hijacking/Hijacking.list, policy=REJECT, tag=⛔️ 全球拦截, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Privacy/Privacy.list, policy=REJECT, tag=⛔️ 全球拦截, enabled=true
 
@@ -92,21 +92,16 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon
 [Plugin]
 https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/plugin/DNS.plugin, tag=🌐DNS, enabled=true
 https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/plugin/General.plugin, tag=🌐General Settings Enhanced, enabled=true
-https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/Location.plugin,tag=📍定位服务, enabled=true
-https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/Siri.plugin,tag=🔍Siri与搜索, enabled=true
+https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/Location.plugin, tag=📍定位服务, enabled=true
+https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/Siri.plugin, tag=🔍Siri与搜索, enabled=true
 https://raw.githubusercontent.com/Peng-YM/Loon-Gallery/master/loon-gallery.plugin, tag=🎈Gallery, enabled=true
 https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.loon.plugin, tag=BoxJS, enabled=true
 https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/Loon.plugin, tag=Sub-Store订阅, enabled=true
 https://raw.githubusercontent.com/deezertidal/private/main/NodeLinkCheck.plugin, tag=NodeLinkCheck, enabled=true
-https://raw.githubusercontent.com/deezertidal/private/main/startingad.plugin, tag=APP启动页去广告, enabled=true
-https://raw.githubusercontent.com/deezertidal/private/main/bili.plugin, tag=Bilibili解锁高清画质, enabled=true
-https://raw.githubusercontent.com/deezertidal/private/main/biliad.plugin, tag=Bilibili去广告, enabled=true
-https://raw.githubusercontent.com/deezertidal/private/main/AdBlock.plugin, tag=Ad广告屏蔽, enabled=true
-https://raw.githubusercontent.com/deezertidal/private/main/wechatad.plugin, tag=微信公众号去广告, enabled=true
-https://raw.githubusercontent.com/deezertidal/private/main/weiboad.plugin, tag=微博去广告, enabled=true
-https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Plugin/Block/YouTubeAds.plugin, tag=YouTube去广告, enabled=true
-https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Plugin/Block/ZhiHu.plugin, tag=知乎去广告, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/Loon/Redirect/Redirect.plugin, tag=重定向, enabled=true
+https://raw.githubusercontent.com/yishangfei/run/main/Loon/Plugin/Redirect.plugin, tag=谷歌重定向, enabled=true
+https://raw.githubusercontent.com/yishangfei/run/main/Loon/Plugin/zhihu.plugin, tag=知乎去广告, enabled=true
+https://raw.githubusercontent.com/yishangfei/run/main/Loon/Plugin/bilibili.plugin, tag=哔哩哔哩去广告, enabled=true
+https://raw.githubusercontent.com/yishangfei/run/main/Loon/Plugin/AdBlock.plugin, tag=Ad广告屏蔽, enabled=true
 
 [MITM]
 hostname =
