--- a/Loon_diy.conf
+++ b/Loon_diy.conf
@@ -5,8 +5,8 @@ ipv6 = false
 skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,localhost,*.local,passenger.t3go.cn,passenger.t3go.cn
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 # DNS 服务器
-dns-server = system,223.5.5.5,119.29.29.29
-doh-server = https://dns.alidns.com/dns-query
+dns-server = system,119.29.29.29,223.5.5.5
+doh-server = https://dns.alidns.com/dns-query,https://south.lele233.pro/cdn,https://east.lele233.pro/dns-query
 # Wi-Fi 访问
 allow-udp-proxy = false
 allow-wifi-access = true
@@ -17,10 +17,12 @@ real-ip = msftconnecttest.com, msftncsi.com, *.msftconnecttest.com, *.msftncsi.c
 # > 代理测速 URL
 proxy-test-url = http://www.gstatic.com/generate_204
 # > 测速超时 (s)
-test-timeout = 5
+test-timeout = 3
 interface-mode = auto
 # 解析器
 resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/backend/dist/sub-store-parser.loon.min.js
+# 要开Fileball MPV的话必须添加
+force-http-engine-hosts = aliyun.example.com:0
 # ssid-trigger参数，用于指定SSID下流量模式切换，（default表示默认，cellular表示蜂窝，目前支持三种值：rule，direct，proxy） 
 # ssid-trigger = "default":rule, "cellular":rule,"ASUS_5G":direct
 
@@ -29,12 +31,12 @@ resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/bac
 
 # >机场订阅
 [Remote Proxy]
-iQZone = https://gist.githubusercontent.com/yishangfei,udp=false,fast-open=false,vmess-aead=true,enabled=true,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China_Telecom.png
+iQZone = https://gist.githubusercontent.com/yishangfei/33e7fd4d9b642d700dd1ff96bd33d681/raw/Loon,udp=false,fast-open=false,vmess-aead=true,enabled=true,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China_Telecom.png
 
 # >策略组
 [Proxy Group]
-自动选择 = url-test,iQZone,url = http://www.gstatic.com/generate_204,interval = 1800,tolerance = 30,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Auto.png
-节点选择 = select,自动选择,香港,日本,其他,Other,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Static.png
+自动选择 = url-test,iQZone,url = http://www.gstatic.com/generate_204,interval = 600,tolerance = 50,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Auto.png
+节点选择 = select,自动选择,新加坡,香港,其他,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Daily.png
 Global = select,节点选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 Telegram = select,节点选择,新加坡,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
 Apple = select,DIRECT,节点选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
@@ -49,7 +51,7 @@ PayPal = select,节点选择,美国,img-url = https://raw.githubusercontent.com/
 日本 = NameRegex,iQZone, FilterKey = "日本|JP"
 美国 = NameRegex,iQZone, FilterKey = "美国|US"
 新加坡 = NameRegex,iQZone, FilterKey = "新加坡|Singapore"
-其他 = NameRegex,iQZone, FilterKey = "泰国|越南"
+其他 = NameRegex,iQZone, FilterKey = "泰国|越南|印度"
 
 # >本地分流规则
 [Rule]
@@ -59,13 +61,17 @@ FINAL,漏网之鱼
 
 # >分流规则 远程订阅
 [Remote Rule]
-https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list, policy=DIRECT, tag=🎯 中国ASN, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/China/China.list, policy=DIRECT, tag=🎯 国内网站, enabled=true
+https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list, policy=DIRECT, tag=🎯 中国ASN, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/ChinaIPs/ChinaIPs.list, policy=DIRECT, tag=🎯 中国IP, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/WeChat/WeChat.list, policy=DIRECT, tag=💬 微信, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Speedtest/Speedtest.list, policy=DIRECT, tag=🌐 Speedtest, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Spotify/Spotify.list, policy=DIRECT, tag=🎵 Spotify, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Apple/Apple.list, policy=Apple, tag=🍎 Apple, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Spotify/Spotify.list, policy=Global, tag=🎵 Spotify, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Apple/Apple.list, policy=Apple, tag=🍎 Apple, enabled=false
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/AppStore.list, policy=Apple, tag=AppStore.list, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/AppleID.list, policy=DIRECT, tag=AppleID.list, enabled=true
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/iCloud/iCloud.list, policy=Apple, tag=iCloud.list, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/ApplePushNotificationService.list, policy=DIRECT, tag=ApplePushNotificationService.list, enabled=true
 https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.Telegram.list, policy=Telegram, tag=📟 Telegram, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/PayPal/PayPal.list, policy=PayPal, tag=💰 PayPal, enabled=true
 https://raw.githubusercontent.com/yishangfei/run/main/Loon/Filter/Emby.list, policy=Emby, tag=📺 Emby, enabled=true
@@ -83,6 +89,8 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon
 
 # >本地脚本
 [Script]
+# 阿里云盘挂载
+http-request ^http:\/\/aliyun\.example\.com script-path=https://raw.githubusercontent.com/githubdulong/Script/master/ali.js, requires-body=true, timeout=10, tag=阿里云盘挂载, img-url=https://raw.githubusercontent.com/Softlyx/Fileball/main/YUAN/ALiYun.png
 
 # >远程脚本订阅
 [Remote Script]
@@ -98,10 +106,18 @@ https://raw.githubusercontent.com/Peng-YM/Loon-Gallery/master/loon-gallery.plugi
 https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.loon.plugin, tag=BoxJS, enabled=true
 https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/Loon.plugin, tag=Sub-Store订阅, enabled=true
 https://raw.githubusercontent.com/deezertidal/private/main/NodeLinkCheck.plugin, tag=NodeLinkCheck, enabled=true
-https://raw.githubusercontent.com/yishangfei/run/main/Loon/Plugin/Redirect.plugin, tag=谷歌重定向, enabled=true
-https://raw.githubusercontent.com/yishangfei/run/main/Loon/Plugin/zhihu.plugin, tag=知乎去广告, enabled=true
-https://raw.githubusercontent.com/yishangfei/run/main/Loon/Plugin/bilibili.plugin, tag=哔哩哔哩去广告, enabled=true
-https://raw.githubusercontent.com/yishangfei/run/main/Loon/Plugin/AdBlock.plugin, tag=Ad广告屏蔽, enabled=true
+https://raw.githubusercontent.com/deezertidal/private/master/plugallery/multisearch.plugin, enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/Loon/Rewrite/Rewrite.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Remove_splash_screen_ads.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Zhihu_remove_ads.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Amap_remove_ads.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Bilibili_remove_ads.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Weibo_remove_ads.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/RedPaper_remove_ads.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/YouTube_remove_ads.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/Weixin_external_links_unlock.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Cainiao_remove_ads.plugin, enabled=true
+https://raw.githubusercontent.com/deezertidal/private/master/plugallery/aptv.plugin, tag=APTV, enabled=false
 
 [MITM]
 hostname =
