--- a/Loon_diy.conf
+++ b/Loon_diy.conf
@@ -31,7 +31,7 @@ force-http-engine-hosts = aliyun.example.com:0
 
 # >机场订阅
 [Remote Proxy]
-iQZone = https://gist.githubusercontent.com/yishangfei/33e7fd4d9b642d700dd1ff96bd33d681/raw/Loon,udp=false,fast-open=false,vmess-aead=true,enabled=true,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China_Telecom.png
+iQZone = https://gist.githubusercontent.com/yishangfei,udp=false,fast-open=false,vmess-aead=true,enabled=true,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China_Telecom.png
 
 # >策略组
 [Proxy Group]
