--- a/QuantumultX_diy.conf
+++ b/QuantumultX_diy.conf
@@ -39,7 +39,7 @@ url-latency-benchmark=自动选择, server-tag-regex=.*, check-interval=1800, to
 static=节点选择, 自动选择,server-tag-regex=新加坡|泰国|越南|香港, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Static.png
 static=Global, 节点选择,proxy,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 static=Telegram, 节点选择, proxy, server-tag-regex=新加坡, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
-static=Apple, direct, 节点选择, server-tag-regex=美国|马来, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
+static=Apple, direct, 节点选择, server-tag-regex=美国, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
 static=Speedtest, direct, 节点选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Speedtest.png
 static=Emby, direct, 节点选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Emby.png
 static=PayPal, 节点选择, server-tag-regex=美国, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
