--- a/Shadowrocket_diy.conf
+++ b/Shadowrocket_diy.conf
@@ -1,30 +1,85 @@
 [General]
-bypass-system = true
-skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com
-tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32, 239.255.255.250/32
-dns-server = 223.5.5.5, 119.29.29.29
+# > 日志级别(true=开启  false=关闭）
+loglevel = notify
+# > 拒绝显示错误页面
+show-error-page-for-reject = true
+# > 增强版 Wi-Fi 助理
+allow-wifi-access = false
+# > All Hybrid 网络并发
+all-hybrid = true
+# > IPv6 支持（默认关闭）
 ipv6 = false
-prefer-ipv6 = false
-dns-fallback-system = false
-dns-direct-system = false
-icmp-auto-reply = true
-always-reject-url-rewrite = false
-private-ip-answer = true
-# direct domain fail to resolve use proxy rule
-dns-direct-fallback-proxy = true
+# > 测试超时（秒）
+test-timeout = 5
+# > Internet 测试 URL
+internet-test-url = http://www.aliyun.com
+# > 代理测速 URL
+proxy-test-url = http://www.gstatic.com/generate_204
+# > GeoIP数据库
+geoip-maxmind-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
+# > 排除简单主机名
+exclude-simple-hostnames = true
+# > DNS 服务器
+dns-server = 223.5.5.5, 119.29.29.29
+hijack-dns = 8.8.8.8:53, 8.8.4.4:53
+# > 从 /etc/hosts 读取 DNS 记录
+read-etc-hosts = true
+# > 远程控制器
+http-api-web-dashboard = false
+use-default-policy-if-wifi-not-primary = false
+# > 跳过代理
+skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, localhost, *.local, *.crashlytics.com, www.baidu.com, yunbusiness.ccb.com
+# > Always Real IP Hosts
+always-real-ip = *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com*.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, *.battlenet.com.cn, *.battlenet.com, *.blzstatic.cn, *.battle.net
+# > 隐藏VPN标志符（默认开启）
+hide-vpn-icon = true
+# > WiFi辅助
+wifi-assist = false
+
+[Replica]
+# > 隐藏 Apple 请求
+hide-apple-request = false
+# > 隐藏崩溃追踪器请求
+hide-crash-reporter-request = true
+# > 隐藏 UDP 会话
+hide-udp = false
+# > 关键词过滤器
+keyword-filter-type = false
 
 
 [Proxy Group]
-🚀 节点选择 = select,♻️ 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇯🇵 日本节点,🇰🇷 韩国节点,🇸🇬 新加坡节点,🇺🇲 美国节点,REJECT,DIRECT,interval=600,timeout=5,select=1,url=http://www.gstatic.com/generate_204
-👋 手动切换 = select, interval=600, timeout=5, select=0, url=http://www.gstatic.com/generate_204, policy-regex-filter=*
+# > 策略组
+✈️ 节点选择 = select, 🚀 自动选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇬🇧 英国节点, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0
+🚀 自动选择 = url-test, 🇨🇳 台湾节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇯🇵 日本节点, 🇭🇰 香港节点, 🇸🇬 新加坡节点, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0
+📲 telegram = url-test, ✈️ 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇬🇧 英国节点, no-alert=0, hidden=0, include-all-proxies=0
+📹 YouTube = url-test, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇬🇧 英国节点, no-alert=0, hidden=0, include-all-proxies=0
+🎥 Netflix = select, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇬🇧 英国节点, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0
+🎬 Disney+ = select, ✈️ 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇬🇧 英国节点, no-alert=0, hidden=0, include-all-proxies=0
+📽 哔哩哔哩 = select, 🌐 全球直连, 🇭🇰 香港节点, 🇨🇳 台湾节点, no-alert=0, hidden=0, include-all-proxies=0
+🍿 国外媒体 = url-test, ✈️ 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇬🇧 英国节点, no-alert=0, hidden=0, include-all-proxies=0
+🍔 国内媒体 = select, 🌐 全球直连, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇬🇧 英国节点, no-alert=0, hidden=0, include-all-proxies=0
+🍟 新浪微博 = select, 🌐 全球直连, ✈️ 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇬🇧 英国节点
+Ⓜ️ 微软服务 = select, 🌐 全球直连, ✈️ 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇬🇧 英国节点
+🍎 苹果服务 = select, 🌐 全球直连, ✈️ 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇬🇧 英国节点
+🎮 游戏平台 = select, 🌐 全球直连, ✈️ 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇬🇧 英国节点, no-alert=0, hidden=0, include-all-proxies=0
+🇭🇰 香港节点 = url-test, update-interval=0, policy-regex-filter=🇭🇰|香港|HK|湾仔|港仔|九龙|HongKong, no-alert=0, hidden=0, include-all-proxies=0
+🇨🇳 台湾节点 = url-test, update-interval=0, policy-regex-filter=🇨🇳|台湾|TW|台北|新竹|台中|桃园|台南|高雄|花莲, no-alert=0, hidden=0, include-all-proxies=0
+🇺🇲 美国节点 = url-test, update-interval=0, policy-regex-filter=🇺🇸|美国|US|华盛顿|俄勒冈|内华达|拉斯维加斯|蒙大纳|怀俄明州|菲尼克斯|阿尔伯克基|丹佛|哥伦比亚, no-alert=0, hidden=0, include-all-proxies=0
+🇷🇺 俄罗斯节点 = url-test, update-interval=0, policy-regex-filter=🇷🇺|俄罗斯|RU|莫斯科|圣彼得堡|喀山|哈尔科夫|乌法|新西伯利亚|下诺夫哥罗德|沃罗涅什, no-alert=0, hidden=0, include-all-proxies=0
+🇬🇧 英国节点 = url-test, update-interval=0, policy-regex-filter=🇬🇧|英国|UK|伦敦|英格兰|伯明翰|泰恩河畔纽卡斯尔|利兹|爱丁堡|格拉斯哥|苏格兰, no-alert=0, hidden=0, include-all-proxies=0
+🇯🇵 日本节点 = url-test, update-interval=0, policy-regex-filter=🇯🇵|日本|JP|东京|大阪|名古屋|福冈|仙台|京都|川日|泉日|埼玉|沪日|深日, no-alert=0, hidden=0, include-all-proxies=0
+🇸🇬 新加坡节点 = url-test, update-interval=0, policy-regex-filter=🇸🇬|新加坡|SG, no-alert=0, hidden=0, include-all-proxies=0
+🤔 手动选择 = select, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0
+
+🚀 节点选择 = select,♻️ 自动选择,新加坡,香港,台湾,日本,no-alert=0, hidden=0, include-all-proxies=0, update-interval=0
 ♻️ 自动选择 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=80,timeout=5,select=0,policy-regex-filter=*
-🇭🇰 香港节点 = url-test, interval=600, tolerance=80, timeout=5, select=0, url=http://www.gstatic.com/generate_204, policy-regex-filter=(?=.*(港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台灣|美國|韓國|獅城)).)*$
-🇨🇳 台湾节点 = url-test, interval=600, tolerance=80, timeout=5, select=0, url=http://www.gstatic.com/generate_204, policy-regex-filter=(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$
-🇯🇵 日本节点 = url-test, interval=600, tolerance=80, timeout=5, select=0, url=http://www.gstatic.com/generate_204, policy-regex-filter=(?=.*(日本|JP|(?i)Japan))^((?!(香港|台湾|新加坡|美国|韩国|狮城|南朝鲜|US|SG|KR|HK|TW|台灣|美國|韓國|獅城)).)*$
-🇰🇷 韩国节点 = url-test, interval=600, tolerance=100, timeout=5, select=0, url=http://www.gstatic.com/generate_204, policy-regex-filter=(?=.*(KR|Korea|KOR|首尔|韩|韓|(?i)Korea))^((?!(香港|台湾|新加坡|美国|狮城|南朝鲜|US|SG|HK|TW|台灣|美國|獅城)).)*$
-🇸🇬 新加坡节点 = url-test, interval=600, tolerance=100, timeout=5, select=0, url=http://www.gstatic.com/generate_204, policy-regex-filter=(?=.*(新加坡|狮城|SG|(?i)Singapore))^((?!(香港|台湾|日本|美国|韩国|南朝鲜|US|JP|KR|HK|TW|台灣|美國|韓國)).)*$
-🇺🇲 美国节点 = url-test, interval=600, tolerance=100, timeout=5, select=0, url=http://www.gstatic.com/generate_204, policy-regex-filter=(?=.*(美国|美國|US|洛杉矶|西雅图|(?i)States|American))^((?!(香港|台湾|日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW|台灣|韓國|獅城)).)*$
-🐟 漏网之鱼 = select, 🚀 节点选择, ♻️ 自动选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇰🇷 韩国节点, 🇸🇬 新加坡节点, 🇺🇲 美国节点, REJECT, DIRECT, interval=600, timeout=5, select=0, url=http://www.gstatic.com/generate_204
+香港 = url-test, update-interval=0, policy-regex-filter=🇭🇰|香港|HK|湾仔|港仔|九龙|HongKong, no-alert=0, hidden=0, include-all-proxies=0
+台湾 = url-test, update-interval=0, policy-regex-filter=🇨🇳|台湾|TW|台北|新竹|台中|桃园|台南|高雄|花莲, no-alert=0, hidden=0, include-all-proxies=0
+日本 = url-test,  update-interval=0, policy-regex-filter=🇯🇵|日本|JP|东京|大阪|名古屋|福冈|仙台|京都|川日|泉日|埼玉|沪日|深日, no-alert=0, hidden=0, include-all-proxies=0
+东南亚 = url-test, update-interval=0, policy-regex-filter=泰国|越南, no-alert=0, hidden=0, include-all-proxies=0
+新加坡 = url-test, update-interval=0, policy-regex-filter=🇸🇬|新加坡|SG, no-alert=0, hidden=0, include-all-proxies=0
+美国 = url-test, update-interval=0, policy-regex-filter=🇺🇸|美国|US, no-alert=0, hidden=0, include-all-proxies=0
+🐟 漏网之鱼 = select, 🚀 节点选择, DIRECT, interval=600, timeout=5, select=0
 
 [Rule]
 # 后续规则修正
