--- a/QuantumultX_diy.conf
+++ b/QuantumultX_diy.conf
@@ -78,19 +78,19 @@ https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Bilibili.conf, tag=B站
 https://github.com/ddgksf2013/Rewrite/raw/master/Function/BaiduCloud.conf, tag=百度网盘倍速@ddgksf2013, update-interval=172800, opt-parser=false, enabled=true
 https://raw.iqiq.io/zZPiglet/Task/master/UnblockURLinWeChat.conf, tag=微信解锁被屏蔽的URL@zZPiglet, update-interval=172800, opt-parser=false, enabled=true
 #>>>>>>>>>>>应用去广告
-https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/StartUp.conf, tag=墨鱼去开屏2.0@ddgksf2013, update-interval=172800, opt-parser=false, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zheye/zheye.snippet, tag=知乎去广告及体验增强@blackmatrix7, update-interval=172800, opt-parser=false, enabled=true
-https://github.com/app2smile/rules/raw/master/module/tieba-qx.conf, tag=百度贴吧去广告@app2smile, update-interval=172800, opt-parser=false, enabled=true
-https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Applet.conf, tag=微信小程序去广告@ddgksf2013, update-interval=172800, opt-parser=false, enabled=true
-https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/YoutubeAds.conf, tag=油管去广告@DivineEngine, update-interval=172800, opt-parser=false, enabled=true
-https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf, tag=微博去广告@ddgksf2013, update-interval=172800, opt-parser=false, enabled=true
-https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Ximalaya.conf, tag=喜马拉雅去广告@ddgksf2013, update-interval=172800, opt-parser=false, enabled=true
-https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Amap.conf, tag=高德地图净化[卸载重装]@ddgksf2013, update-interval=172800, opt-parser=true, enabled=true
-https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/XiaoHongShu.conf, tag=小红书去广告@ddgksf2013, update-interval=172800, opt-parser=true, enabled=true
-https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Cainiao.conf, tag=菜鸟☆净化@ddgksf2013, update-interval=172800, opt-parser=true, enabled=true
-https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Netease.conf, tag=网易云音乐去广告@ddgksf2013, update-interval=172800, opt-parser=true, enabled=true
+https://raw.iqiq.io/ddgksf2013/Rewrite/master/AdBlock/StartUp.conf, tag=墨鱼去开屏2.0@ddgksf2013, update-interval=172800, opt-parser=false, enabled=true
+https://raw.iqiq.io/blackmatrix7/ios_rule_script/master/script/zheye/zheye.snippet, tag=知乎去广告及体验增强@blackmatrix7, update-interval=172800, opt-parser=false, enabled=true
+https://raw.iqiq.io/app2smile/rules/master/module/tieba-qx.conf, tag=百度贴吧去广告@app2smile, update-interval=172800, opt-parser=false, enabled=true
+https://raw.iqiq.io/ddgksf2013/Rewrite/master/AdBlock/Applet.conf, tag=微信小程序去广告@ddgksf2013, update-interval=172800, opt-parser=false, enabled=true
+https://raw.iqiq.io/ddgksf2013/Rewrite/master/AdBlock/YoutubeAds.conf, tag=油管去广告@DivineEngine, update-interval=172800, opt-parser=false, enabled=true
+https://raw.iqiq.io/ddgksf2013/Rewrite/master/AdBlock/Weibo.conf, tag=微博去广告@ddgksf2013, update-interval=172800, opt-parser=false, enabled=true
+https://raw.iqiq.io/ddgksf2013/Rewrite/master/AdBlock/Ximalaya.conf, tag=喜马拉雅去广告@ddgksf2013, update-interval=172800, opt-parser=false, enabled=true
+https://raw.iqiq.io/ddgksf2013/Rewrite/master/AdBlock/Amap.conf, tag=高德地图净化[卸载重装]@ddgksf2013, update-interval=172800, opt-parser=true, enabled=true
+https://raw.iqiq.io/ddgksf2013/Rewrite/master/AdBlock/XiaoHongShu.conf, tag=小红书去广告@ddgksf2013, update-interval=172800, opt-parser=true, enabled=true
+https://raw.iqiq.io/ddgksf2013/Rewrite/master/AdBlock/Cainiao.conf, tag=菜鸟☆净化@ddgksf2013, update-interval=172800, opt-parser=true, enabled=true
+https://raw.iqiq.io/ddgksf2013/Rewrite/master/AdBlock/Netease.conf, tag=网易云音乐去广告@ddgksf2013, update-interval=172800, opt-parser=true, enabled=true
 #>>>>>>>>>>>网页优化
-https://github.com/ddgksf2013/Rewrite/raw/master/Html/Q-Search.conf, tag=Safari超级搜索@ddgksf2013, update-interval=172800, opt-parser=false, enabled=true
+https://raw.iqiq.io/ddgksf2013/Rewrite/master/Html/Q-Search.conf, tag=Safari超级搜索@ddgksf2013, update-interval=172800, opt-parser=false, enabled=true
 #>>>>>>>>>>>解锁TikTok
 https://raw.iqiq.io/Semporia/TikTok-Unlock/master/Quantumult-X/TikTok-US.conf, tag=TikTok, update-interval=172800, opt-parser=false, enabled=true
 #>>>>>>>>>>>其他
