--- a/QuantumultX_diy.conf
+++ b/QuantumultX_diy.conf
@@ -37,14 +37,14 @@ https://gist.githubusercontent.com/, tag=花云, img-url=https://raw.iqiq.io/Orz
 # 默认设置10分钟测速一次，当前使用节点延迟和最新测速延迟最低的节点相差100ms以上则切换为最新的最低延迟节点，否则继续延用节点
 url-latency-benchmark=自动选择, server-tag-regex=.*, check-interval=1800, tolerance=30, img-url=https://raw.iqiq.io/Koolson/Qure/master/IconSet/Color/Auto.png
 static=节点选择, 自动选择,香港节点,东南亚节点,img-url=https://raw.iqiq.io/Koolson/Qure/master/IconSet/Color/Static.png
-static=Global, 节点选择,proxy,img-url=https://raw.iqiq.io/Koolson/Qure/master/IconSet/Color/Global.png
-static=Telegram, 节点选择, proxy, server-tag-regex=新加坡, img-url=https://raw.iqiq.io/Koolson/Qure/master/IconSet/Color/Telegram.png
-static=Apple, direct, 节点选择, server-tag-regex=美国, img-url=https://raw.iqiq.io/Koolson/Qure/master/IconSet/Color/Apple.png
+static=Global, 节点选择,img-url=https://raw.iqiq.io/Koolson/Qure/master/IconSet/Color/Global.png
+static=Telegram, 节点选择, 东南亚节点, img-url=https://raw.iqiq.io/Koolson/Qure/master/IconSet/Color/Telegram.png
+static=Apple, direct, 节点选择, 美国节点, img-url=https://raw.iqiq.io/Koolson/Qure/master/IconSet/Color/Apple.png
 static=Emby, direct, 节点选择, img-url=https://raw.iqiq.io/Koolson/Qure/master/IconSet/Color/Emby.png
-static=TikTok, server-tag-regex=日本|美国, img-url=https://raw.iqiq.io/Koolson/Qure/master/IconSet/Color/TikTok.png
+static=TikTok, 美国节点,日本节点, img-url=https://raw.iqiq.io/Koolson/Qure/master/IconSet/Color/TikTok.png
 static=Speedtest, direct, 节点选择, img-url=https://raw.iqiq.io/Koolson/Qure/master/IconSet/Color/Speedtest.png
-static=PayPal, 节点选择, server-tag-regex=美国, img-url=https://raw.iqiq.io/Koolson/Qure/master/IconSet/Color/PayPal.png
-static=漏网之鱼, 节点选择, proxy, direct, img-url=https://raw.iqiq.io/Koolson/Qure/master/IconSet/Color/Final.png
+static=PayPal, 节点选择, 美国节点, img-url=https://raw.iqiq.io/Koolson/Qure/master/IconSet/Color/PayPal.png
+static=漏网之鱼, 节点选择, direct, img-url=https://raw.iqiq.io/Koolson/Qure/master/IconSet/Color/Final.png
 
 url-latency-benchmark=香港节点, server-tag-regex=港|HK, check-interval=900, tolerance=0, img-url=https://raw.iqiq.io/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
 url-latency-benchmark=台湾节点, server-tag-regex=台|TW, check-interval=900, tolerance=0, img-url=https://raw.iqiq.io/Koolson/Qure/master/IconSet/Color/China.png
