--- a/QuantumultX_diy.conf
+++ b/QuantumultX_diy.conf
@@ -37,7 +37,7 @@ https://gist.githubusercontent.com/, tag=花云, img-url=https://raw.iqiq.io/Orz
 # 默认设置10分钟测速一次，当前使用节点延迟和最新测速延迟最低的节点相差100ms以上则切换为最新的最低延迟节点，否则继续延用节点
 url-latency-benchmark=自动选择, server-tag-regex=.*, check-interval=1800, tolerance=30, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Auto.png
 static=节点选择, 自动选择,server-tag-regex=香港|新加坡|泰国|越南,img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Static.png
-static==Global, 节点选择,proxy,img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Global.png
+static==Global, 节点选择,img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Global.png
 static=Telegram, 节点选择, server-tag-regex=新加坡, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Telegram.png
 static=Apple, direct, 节点选择, 美国节点, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Apple.png
 static=Emby, direct, 节点选择, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Emby.png
