--- a/QuantumultX_diy.conf
+++ b/QuantumultX_diy.conf
@@ -28,7 +28,9 @@ server=/*.tencent.com/119.29.29.29
 server=/*.weixin.com/119.29.29.29
 
 #doh服务 DNS over HTTPS
-doh-server=https://dns.alidns.com/dns-query,https://south.lele233.pro/dns-query,https://east.lele233.pro/dns-query
+doh-server = https://dns.alidns.com/dns-query,https://south.lele233.pro/dns-query,https://east.lele233.pro/dns-query
+#doq服务 DNS over QUIC
+doq-server = quic://south.ovo.glass,quic://east.ovo.glass
 
 [server_remote]
 https://gist.githubusercontent.com/, tag=花云, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Flower.png, update-interval=172800, opt-parser=false, enabled=true
