--- a/QuantumultX_diy.conf
+++ b/QuantumultX_diy.conf
@@ -9,7 +9,7 @@ geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://github.com/KOP-
 # 资源解析器
 resource_parser_url= https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
 #链接头像
-profile_img_url= https://raw.githubusercontent.com/ssfun/fileball-icons/main/icons/Alipan.png
+profile_img_url= https://avatars.githubusercontent.com/u/15099278?s=48&v=4
 # Quantumult X 会对 server_check_url 指定的网址进行相应测试，以确认节点的可用性
 server_check_url=http://www.gstatic.com/generate_204
 # 下列表中的内容将不经过 QuantumultX的处理
