--- a/QuantumultX_diy.conf
+++ b/QuantumultX_diy.conf
@@ -3,17 +3,17 @@
 
 [general]
 # dns exclusion list中的域名将不使用fake-ip方式. 其它域名则全部采用 fake-ip 及远程解析的模式
-dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.pingan.com.cn, *.cmbchina.com
+dns_exclusion_list = *.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.pingan.com.cn, *.cmbchina.com
 # 自定义查询节点信息
-geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://github.com/KOP-XIAO/QuantumultX/raw/master/Scripts/IP_API.js
+geo_location_checker = http://ip-api.com/json/?lang=zh-CN
 # 资源解析器
-resource_parser_url= https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
+resource_parser_url = https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
 #链接头像
-profile_img_url= https://avatars.githubusercontent.com/u/15099278?s=48&v=4
+profile_img_url = https://avatars.githubusercontent.com/u/15099278?s=48&v=4
 # Quantumult X 会对 server_check_url 指定的网址进行相应测试，以确认节点的可用性
-server_check_url=http://www.gstatic.com/generate_204
+server_check_url = http://www.gstatic.com/generate_204
 # 下列表中的内容将不经过 QuantumultX的处理
-excluded_routes=192.168.0.0/16, 10.0.0.0/8, 127.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, 224.0.0.0/4
+excluded_routes = 192.168.0.0/16, 10.0.0.0/8, 127.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, 224.0.0.0/4
 #默认关闭根据wifi切换模式，如需开启，删除下方的“#”即可！
 #running_mode_trigger=filter, filter,xjj_5G: all_direct
 
