--- a/QuantumultX_diy.conf
+++ b/QuantumultX_diy.conf
@@ -5,7 +5,7 @@
 # dns exclusion list中的域名将不使用fake-ip方式. 其它域名则全部采用 fake-ip 及远程解析的模式
 dns_exclusion_list = *.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.pingan.com.cn, *.cmbchina.com
 # 自定义查询节点信息
-geo_location_checker = http://ip-api.com/json/?lang=zh-CN
+geo_location_checker = http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/I-am-R-E/Functional-Store-Hub/Master/GeoLocationChecker/QuantumultX/IP-API-TaiwanFlag.js
 # 资源解析器
 resource_parser_url = https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
 #链接头像
@@ -104,6 +104,7 @@ FINAL,漏网之鱼
 
 [task_local]
 0 0 0 * * ? https://github.com/sub-store-org/Sub-Store/releases/latest/download/cron-sync-artifacts.min.js, tag=Sub-Store Sync, img-url=https://raw.iqiq.io/58xinian/icon/master/Sub-Store1.png, enabled=true
+event-interaction https://raw.githubusercontent.com/I-am-R-E/Functional-Store-Hub/Master/NodeLinkCheck/Script/NodeLinkCheck.js, tag=Env代理链路检测, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Stack.png, enabled=true
 
 [mitm]
 passphrase = 9CCCE42D
