--- a/QuantumultX_diy.conf
+++ b/QuantumultX_diy.conf
@@ -34,6 +34,7 @@ doq-server = quic://south.ovo.glass,quic://east.ovo.glass
 
 [server_remote]
 https://gist.githubusercontent.com/, tag=花云, img-url=https://raw.iqiq.io/Orz-3/mini/master/Alpha/Flower.png, update-interval=172800, opt-parser=false, enabled=true
+https://gist.githubusercontent.com/ddgksf2013/baacafc36c685a0af41e500d9a4773ab/raw/Netease.list, tag=网易云音乐
 
 [policy]
 # 默认设置10分钟测速一次，当前使用节点延迟和最新测速延迟最低的节点相差100ms以上则切换为最新的最低延迟节点，否则继续延用节点
@@ -43,6 +44,7 @@ static=Global, 节点选择,img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/
 static=Telegram, 节点选择, server-tag-regex=新加坡, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Telegram.png
 static=Apple, direct, 节点选择, 美国节点, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Apple.png
 static=Emby, direct, 节点选择, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Emby.png
+static=Netease_Music, direct,server-tag-regex=网易, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Netease.png
 static=Speedtest, direct, 节点选择, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Speedtest.png
 static=PayPal, 节点选择, 美国节点, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Paypal.png
 static=漏网之鱼, 节点选择, direct, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Final.png
@@ -59,6 +61,7 @@ https://raw.githubusercontent.com/DivineEngine/Profiles/master/Quantumult/Filter
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/WeChat/WeChat.list, tag=💬WeChat-直连, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Speedtest/Speedtest.list, tag=🌐Speedtest-直连, force-policy=Speedtest, update-interval=172800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Apple/Apple.list, tag=🍎 Apple, update-interval=172800, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/ddgksf2013/Filter/master/NeteaseMusic.list, tag=解锁网易云音乐, force-policy=Netease_Music, update-interval=172800, opt-parser=false, enabled=false
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Telegram/Telegram.list, tag=📟 Telegram, force-policy=Telegram, update-interval=172800, opt-parser=false , enabled=true
 https://raw.githubusercontent.com/yishangfei/run/main/QuantumultX/Emby.list, tag=📺Emby, force-policy=Emby, update-interval=172800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/PayPal/PayPal.list, tag=💰 PayPal, force-policy=PayPal, update-interval=172800, opt-parser=false, enabled=true
