--- a/QuantumultX_diy.conf
+++ b/QuantumultX_diy.conf
@@ -61,7 +61,7 @@ https://raw.githubusercontent.com/DivineEngine/Profiles/master/Quantumult/Filter
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/WeChat/WeChat.list, tag=💬WeChat-直连, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Speedtest/Speedtest.list, tag=🌐Speedtest-直连, force-policy=Speedtest, update-interval=172800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Apple/Apple.list, tag=🍎 Apple, update-interval=172800, opt-parser=false, enabled=true
-https://raw.githubusercontent.com/ddgksf2013/Filter/master/NeteaseMusic.list, tag=解锁网易云音乐, force-policy=Netease_Music, update-interval=172800, opt-parser=false, enabled=false
+https://raw.githubusercontent.com/ddgksf2013/Filter/master/NeteaseMusic.list, tag=解锁网易云音乐, force-policy=Netease_Music, update-interval=172800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Telegram/Telegram.list, tag=📟 Telegram, force-policy=Telegram, update-interval=172800, opt-parser=false , enabled=true
 https://raw.githubusercontent.com/yishangfei/run/main/QuantumultX/Emby.list, tag=📺Emby, force-policy=Emby, update-interval=172800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/PayPal/PayPal.list, tag=💰 PayPal, force-policy=PayPal, update-interval=172800, opt-parser=false, enabled=true
