--- a/QuantumultX_diy.conf
+++ b/QuantumultX_diy.conf
@@ -46,12 +46,13 @@ static=Apple, direct, 节点选择, 美国节点, img-url=https://raw.iqiq.io/Or
 static=Emby, direct, 节点选择, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Emby.png
 static=Speedtest, direct, 节点选择, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Speedtest.png
 static=PayPal, 节点选择, 美国节点, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Paypal.png
-static=Netease_Music, direct,server-tag-regex=网易, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Netease.png
+static=Netease_Music, direct,网易云节点, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Netease.png
 static=漏网之鱼, 节点选择, direct, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Final.png
 
 url-latency-benchmark=台湾节点, server-tag-regex=台|TW, check-interval=900, tolerance=0, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/TW.png
 url-latency-benchmark=日本节点, server-tag-regex=日|JP check-interval=900, tolerance=0, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/JP.png
 url-latency-benchmark=美国节点, server-tag-regex=美|US, check-interval=900, tolerance=0, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/US.png
+url-latency-benchmark=网易云节点, server-tag-regex=网易, check-interval=900, tolerance=0, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Netease.png
 
 [filter_remote]
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/ChinaASN/ChinaASN.list, tag=🎯国内ASN-直连, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
