--- a/QuantumultX_diy.conf
+++ b/QuantumultX_diy.conf
@@ -33,7 +33,7 @@ doh-server = https://dns.alidns.com/dns-query,https://south.lele233.pro/dns-quer
 doq-server = quic://south.ovo.glass,quic://east.ovo.glass
 
 [server_remote]
-https://gist.githubusercontent.com/yishangfei/33e7fd4d9b642d700dd1ff96bd33d681/raw/Qx, tag=花云, img-url=https://raw.iqiq.io/Orz-3/mini/master/Alpha/Flower.png, update-interval=172800, opt-parser=false, enabled=true
+https://gist.githubusercontent.com/yishangfei/, tag=花云, img-url=https://raw.iqiq.io/Orz-3/mini/master/Alpha/Flower.png, update-interval=172800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/yishangfei/run/main/QuantumultX/Netease.snippet, tag=网易云音乐, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Netease.png, update-interval=172800, opt-parser=false, enabled=true
 
 [policy]
